Bug 53573 - [Bisected i965]Oglc fboarb(advanced.blit.copypix) regressed
Summary: [Bisected i965]Oglc fboarb(advanced.blit.copypix) regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 9.0
Hardware: All Linux (All)
: high major
Assignee: Kenneth Graunke
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-16 06:23 UTC by lu hua
Modified: 2012-10-09 08:21 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments
output (8.44 KB, text/plain)
2012-08-16 06:23 UTC, lu hua
Details

Description lu hua 2012-08-16 06:23:41 UTC
Created attachment 65628 [details]
output

System Environment:
--------------------------
Arch:             x86_64
Platform:         Ironlake
Libdrm:	(master)libdrm-2.4.38-3-g3163cfe4db925429760407e77140e2d595338bc2
Mesa:	(master)b3900ed5ad9bd5df112490dd2b5d2c17d6124067
Xserver:(master)xorg-server-1.12.99.904-4-gc0540b4c8db676d18a9a09828f1590b0b16f9ebc
Xf86_video_intel:(master)2.20.3-39-g0c882f4fa991ef379e416628eb41cd2178818ad1
Libva:	(staging)f12f80371fb534e6bbf248586b3c17c298a31f4e
Libva_intel_driver:(staging)82fa52510a37ab645daaa3bb7091ff5096a20d0b
Kernel:	(drm-intel-next-queued) dec3ad8d19a4a496b2588bee2bcd7fce3a6731bc

Bug detailed description:
-------------------------
It fails on ironlake with mesa master branch.It doesn't happen on mesa 8.0 branch.

Bisect shows:091eb15b694a396f8453093575ccec2db7f14eb8 is the first bad commit
commit 091eb15b694a396f8453093575ccec2db7f14eb8
Author:     Jordan Justen <jordan.l.justen@intel.com>
AuthorDate: Thu Jun 21 09:40:47 2012 -0700
Commit:     Jordan Justen <jordan.l.justen@intel.com>
CommitDate: Tue Aug 14 17:07:42 2012 -0700

    meta: allow CopyTexSubImage on integer formats

    Signed-off-by: Jordan Justen <jordan.l.justen@intel.com>
    Reviewed-by: Brian Paul <brianp@vmware.com>


Visual Report:
ID      |ACCELERA|DB      |REND_T  |SURF_T  |C_BUF_T |BUF_S   |RED_S   |
     115|       1|       1|      gl|  wipbpx|    rgba|      32|       8|

GREEN_S |BLUE_S  |ALPHA_S |DEPTH_S |STENC_S |ACCUM_S |SPL_BUF |SAMPLES |
       8|       8|       8|      24|       8|      64|       0|       0|

SRGB    |TEX_RGB |TEX_RGBA|CAVEAT  |SWAP    |M_PBUF_W|M_PBUF_H|M_PBUF_P
      -1|       0|       0|    slow|   undef|       0|       0|       0

Reproduce steps:
----------------------------
1.   start  x
2.  ./oglconform -z -suite all -v 2 -D 115 -test fboarb advanced.blit.copypix
Comment 1 lu hua 2012-09-07 01:37:43 UTC
It also happens on ivybridge and sandybridge with mesa master branch.

It fails on ironlake, ivybridge and sandybridge with mesa 9.0 branch (commit:c7775e842bec815ede6badc35d).
Comment 2 Kenneth Graunke 2012-09-16 06:20:24 UTC
I sent a patch which fixes this issue to the mailing list:
http://lists.freedesktop.org/archives/mesa-dev/2012-September/027521.html
Comment 3 Kenneth Graunke 2012-09-27 22:45:20 UTC
Fixed on master by:

commit 3767b25bd3f77cede452cfbe9b66a51b352d9036
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Sat Sep 15 23:18:36 2012 -0700

    meta: Use float for temporary images, not (un)signed normalized.
    
    In commit 091eb15b694, Jordan changed get_temp_image_type() to use
    _mesa_get_format_datatype() instead of returning GL_FLOAT.  That has
    several possible return values: GL_FLOAT, GL_INT, GL_UNSIGNED_INT,
    GL_SIGNED_NORMALIZED, and GL_UNSIGNED_NORMALIZED.
    
    We do want to use GL_INT/GL_UNSIGNED_INT for integer formats.  However,
    we want to continue using GL_FLOAT for the normalized fixed-point types.
    There isn't any code in pack.c to handle GL_(UN)SIGNED_NORMALIZED.
    
    Fixes oglconform's fboarb advanced.blit.copypix, which was regressed by
    commit 091eb15b694a396f8453093575ccec2db7f14eb8.
    
    NOTE: This is a candidate for the 9.0 branch.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=53573
    Signed-off-by: Kenneth Graunke <kenneth@whitecape.org>

Cherry-picking to 9.0 is still pending.
Comment 4 Kenneth Graunke 2012-10-01 21:43:49 UTC
Ian cherry-picked this to 9.0.  Closing as fixed.
Comment 5 lu hua 2012-10-09 08:21:03 UTC
Verified.Fixed on master branch by commit:3767b25bd3f77cede452cfbe9b66a51b352d9036
commit 3767b25bd3f77cede452cfbe9b66a51b352d9036
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Sat Sep 15 23:18:36 2012 -0700

    meta: Use float for temporary images, not (un)signed normalized.
    


Fixed on 9.0 branch by commit:549129838ca5f80152c83474276b65f89b0f8013


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.